--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bs-oak/json",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "scripts": {
     "clean": "bsb -clean-world",
     "build": "bsb -make-world",
@@ -15,5 +15,8 @@
   "devDependencies": {
     "@glennsl/bs-jest": "^0.4.2",
     "bs-platform": "^3.1.5"
+  },
+  "dependencies": {
+    "@bs-oak/base": "^0.1.2"
   }
 }
