--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,10 +1,16 @@
 {
   "name": "@bs-oak/json",
-  "version": "0.1.3",
-  "sources": {
-    "dir": "src",
-    "subdirs": true
-  },
+  "version": "0.1.4",
+  "sources": [
+    {
+      "dir": "src",
+      "subdirs": true
+    },
+    {
+      "dir": "__tests__",
+      "type": "dev"
+    }
+  ],
   "package-specs": {
     "module": "commonjs",
     "in-source": true
